# personal-second-brain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/cli/: README.md  package.json
apps/dashboard/: README.md  package.json
apps/media-intake/: package.json
apps/obsidian-helper/: README.md  package.json
docs/: CORE_V0.1_QUICKSTART.md  PROJECT_HANDOFF.md
docs/architecture/: interface_contracts.md  local_first_strategy.md  memory_layers.md  obsidian_compatibility.md  privacy_and_security.md  retrieval_strategy.md  sidecar_contract.md  storage_strategy.md  system_architecture.md
docs/decisions/: adr_002_local_first_open_format.md  (+6 more)
examples/: README.md
schemas/: README.md
scripts/: com.personalsecondbrain.mediascan.plist.template  grant_config_schema.test.ts  index_vault.ts  init_workspace.test.ts  init_workspace.ts  media_drive_scan.command  media_drive_scan.sh  media_drive_scan.smoke.sh  media_reference_schema.test.ts  proposal_schema.test.ts  query_memory.ts  smoke_core_v0.1.sh  tsconfig.json  validate_notes.test.ts  validate_notes.ts
sidecars/retrieval/: README.md  pyproject.toml
sidecars/retrieval/benchmarks/: bench_embed.py
sidecars/retrieval/src/retrieval_sidecar/: __init__.py  __main__.py  chunking.py  embeddings.py  errors.py  index_store.py  indexer.py  notes.py  protocol.py  querying.py  server.py
sidecars/retrieval/tests/: conftest.py  test_chunking.py  test_graph_temporal.py  test_index_and_query.py  test_protocol.py  test_semantic.py  test_server.py
(+138 files in other folders)
